@@ -1,10 +1,8 @@
 package com.salesmanager.test.shop.integration.cart;
 
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThat;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.springframework.http.HttpStatus.CREATED;
 import static org.springframework.http.HttpStatus.NOT_FOUND;
 import static org.springframework.http.HttpStatus.NO_CONTENT;
@@ -14,7 +12,6 @@ import org.junit.jupiter.api.MethodOrderer;
 import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestMethodOrder;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.context.SpringBootTest.WebEnvironment;
@@ -22,7 +19,6 @@ import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.ResponseEntity;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import com.salesmanager.shop.application.ShopApplication;
 import com.salesmanager.shop.model.catalog.product.ReadableProduct;
@@ -31,7 +27,6 @@ import com.salesmanager.shop.model.shoppingcart.ReadableShoppingCart;
 import com.salesmanager.test.shop.common.ServicesTestSupport;
 
 @SpringBootTest(classes = ShopApplication.class, webEnvironment = WebEnvironment.RANDOM_PORT)
-@ExtendWith(SpringExtension.class)
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 public class ShoppingCartAPIIntegrationTest extends ServicesTestSupport {
 
@@ -59,7 +54,7 @@ public class ShoppingCartAPIIntegrationTest extends ServicesTestSupport {
         cartItem.setQuantity(1);
 
         final HttpEntity<PersistableShoppingCartItem> cartEntity = new HttpEntity<>(cartItem, getHeader());
-        final ResponseEntity<ReadableShoppingCart> response = testRestTemplate.postForEntity(String.format("/api/v1/cart/"), cartEntity, ReadableShoppingCart.class);
+        final ResponseEntity<ReadableShoppingCart> response = testRestTemplate.postForEntity("/api/v1/cart/".formatted(), cartEntity, ReadableShoppingCart.class);
 
         data.setCartId(response.getBody().getCode());
 
@@ -87,7 +82,7 @@ public class ShoppingCartAPIIntegrationTest extends ServicesTestSupport {
         cartItem.setQuantity(1);
 
         final HttpEntity<PersistableShoppingCartItem> cartEntity = new HttpEntity<>(cartItem, getHeader());
-        final ResponseEntity<ReadableShoppingCart> response = testRestTemplate.exchange(String.format("/api/v1/cart/" + String.valueOf(data.getCartId())),
+        final ResponseEntity<ReadableShoppingCart> response = testRestTemplate.exchange(("/api/v1/cart/" + String.valueOf(data.getCartId())).formatted(),
                 HttpMethod.PUT,
                 cartEntity,
                 ReadableShoppingCart.class);
@@ -115,7 +110,7 @@ public class ShoppingCartAPIIntegrationTest extends ServicesTestSupport {
         cartItem.setQuantity(1);
 
         final HttpEntity<PersistableShoppingCartItem> cartEntity = new HttpEntity<>(cartItem, getHeader());
-        final ResponseEntity<ReadableShoppingCart> response = testRestTemplate.exchange(String.format("/api/v1/cart/" + data.getCartId() + "breakIt"),
+        final ResponseEntity<ReadableShoppingCart> response = testRestTemplate.exchange(("/api/v1/cart/" + data.getCartId() + "breakIt").formatted(),
                 HttpMethod.PUT,
                 cartEntity,
                 ReadableShoppingCart.class);
@@ -136,7 +131,7 @@ public class ShoppingCartAPIIntegrationTest extends ServicesTestSupport {
     public void updateMultiWCartId() throws Exception {
 
         PersistableShoppingCartItem cartItem1 = new PersistableShoppingCartItem();
-        cartItem1.setProduct(data.getProducts().get(0).getSku());
+        cartItem1.setProduct(data.getProducts().getFirst().getSku());
         cartItem1.setQuantity(2);
 
         PersistableShoppingCartItem cartItem2 = new PersistableShoppingCartItem();
@@ -148,8 +143,8 @@ public class ShoppingCartAPIIntegrationTest extends ServicesTestSupport {
 
 
         final HttpEntity<PersistableShoppingCartItem[]> cartEntity = new HttpEntity<>(productsQtyUpdates, getHeader());
-        final ResponseEntity<ReadableShoppingCart> response = testRestTemplate.exchange(String.format("/api/v1/cart/" + data.getCartId() +
-                        "/multi"),
+        final ResponseEntity<ReadableShoppingCart> response = testRestTemplate.exchange(("/api/v1/cart/" + data.getCartId() +
+						"/multi").formatted(),
                 HttpMethod.POST,
                 cartEntity,
                 ReadableShoppingCart.class);
@@ -169,15 +164,15 @@ public class ShoppingCartAPIIntegrationTest extends ServicesTestSupport {
     public void updateMultiWZeroOnOneProd() throws Exception {
 
         PersistableShoppingCartItem cartItem1 = new PersistableShoppingCartItem();
-        cartItem1.setProduct(data.getProducts().get(0).getSku());
+        cartItem1.setProduct(data.getProducts().getFirst().getSku());
         cartItem1.setQuantity(0);
 
         PersistableShoppingCartItem[] productsQtyUpdates = {cartItem1};
 
 
         final HttpEntity<PersistableShoppingCartItem[]> cartEntity = new HttpEntity<>(productsQtyUpdates, getHeader());
-        final ResponseEntity<ReadableShoppingCart> response = testRestTemplate.exchange(String.format("/api/v1/cart/" + data.getCartId() +
-                        "/multi"),
+        final ResponseEntity<ReadableShoppingCart> response = testRestTemplate.exchange(("/api/v1/cart/" + data.getCartId() +
+						"/multi").formatted(),
                 HttpMethod.POST,
                 cartEntity,
                 ReadableShoppingCart.class);
@@ -197,7 +192,7 @@ public class ShoppingCartAPIIntegrationTest extends ServicesTestSupport {
     public void deleteCartItem() throws Exception {
 
         final ResponseEntity<ReadableShoppingCart> response =
-                testRestTemplate.exchange(String.format("/api/v1/cart/" + data.getCartId() + "/product/" + String.valueOf(data.getProducts().get(1).getId())),
+                testRestTemplate.exchange(("/api/v1/cart/" + data.getCartId() + "/product/" + String.valueOf(data.getProducts().get(1).getId())).formatted(),
                 HttpMethod.DELETE,
                 null,
                 ReadableShoppingCart.class);
@@ -217,7 +212,7 @@ public class ShoppingCartAPIIntegrationTest extends ServicesTestSupport {
     public void deleteCartItemWithBody() throws Exception {
 
         final ResponseEntity<ReadableShoppingCart> response =
-                testRestTemplate.exchange(String.format("/api/v1/cart/" + data.getCartId() + "/product/" + String.valueOf(data.getProducts().get(1).getSku()) + "?body=true"),
+                testRestTemplate.exchange(("/api/v1/cart/" + data.getCartId() + "/product/" + String.valueOf(data.getProducts().get(1).getSku()) + "?body=true").formatted(),
                         HttpMethod.DELETE,
                         null,
                         ReadableShoppingCart.class);
